modifid index.html

--- a/project/index.html
+++ b/project/index.html
@@ -52,7 +52,7 @@
         <div class="left">
            <div class="top-box">
             <h1>Electricians</h1>
-            <div class="rating" style="display: flex; margin-left: -250px;">
+            <div class="rating" style="display: flex;margin-left: -200px; margin-top: -12px;">
               <p style="margin-top: 12px; font-size: 20px;">4.84 (3.7k bookings)</p>
               <input type="radio" name="rating" value="4" id="5"><label style="font-size: 30px;" for="5">☆</label> 
             </div>
