Offer section removing

--- a/PrivatePolicy.html
+++ b/PrivatePolicy.html
@@ -44,9 +44,9 @@
         </div>
 
 
-        <div class="topDiscount">
+        <!-- <div class="topDiscount">
            <p class="discountText">50% off on your first Booking!</p> 
-        </div>
+        </div> -->
 
         <div class="headerSection">
             <div class="headerLogo">
