--- a/project/index.html
+++ b/project/index.html
@@ -19,9 +19,9 @@
 <body>
 
   <header>
-    <div class="topDiscount">
+    <!-- <div class="topDiscount">
        <p class="discountText">50% off on your first Booking!</p> 
-    </div>
+    </div> -->
 
     <div class="headerSection">
         <div class="headerLogo">
